# Clarividus-ML

./: .gitignore  CIFAR.ipynb  pyproject.toml  requirements.txt
config/: test.yaml
notebooks/: testing.ipynb
src/: main.py
src/clarividus/data/: __init__.py  cifar.py  dataset.py  dataset_registry.py  transforms.py
src/clarividus/data/datasets/: __init__.py  cifar.py
src/clarividus/utils/: __init__.py  config.py  enums.py
src/data/: transforms.py
src/utils/: __init__.py  config.py
