[project]
name = "clarividus"
version = "0.1.0"
description = "A multipurpose image classification ML framework"
authors = [{ name = "Henry Paschke", email = "h3nry.pas@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
